// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Upload render function Add image 1`] = `
<CreateProfilePage
  addImage={[Function]}
>
  <div
    className="container"
  >
    <div
      className="profile__edit-titlezone"
    >
      <h1
        className="profile__edit-title"
      />
    </div>
    <div
      className="profile__edit-page-position"
    >
      <div
        className="profile__edit-top-position"
      >
        <div
          className="profile__edit-image-zone"
        >
          <div
            className="profile__edit-image-upload"
          >
            <ProfileUploadImage
              activateSaveButton={[Function]}
              onFile={[Function]}
              personalImage={null}
              tempPersonalImage={null}
              thumbnailImage="/img/general/user-placeholder-thumbnail.svg"
              thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
            >
              <div
                className="profile-picture"
              >
                <div
                  className="image-upload"
                >
                  <div
                    className="image-upload-loader"
                  >
                    <UploadButton
                      baseImage="/img/general/user-placeholder-thumbnail.svg"
                      readFiles={[Function]}
                      thumbnailImageHover="/img/general/user-placeholder-thumbnail-hover.svg"
                    >
                      <label>
                        <HoverImage
                          mouseOver="/img/general/user-placeholder-thumbnail-hover.svg"
                          src="/img/general/user-placeholder-thumbnail.svg"
                        >
                          <img
                            alt=""
                            className="image-upload-image"
                            onMouseOut={[Function]}
                            onMouseOver={[Function]}
                            src="/img/general/user-placeholder-thumbnail.svg"
                          />
                        </HoverImage>
                        <input
                          accept="image/png, image/jpeg"
                          className="droppable-image-field--file-input"
                          onChange={[Function]}
                          type="file"
                        />
                      </label>
                    </UploadButton>
                  </div>
                  <div
                    style={
                      Object {
                        "clear": "both",
                      }
                    }
                  />
                  <div
                    className="profile__image-errors"
                  >
                    <Error />
                  </div>
                </div>
              </div>
            </ProfileUploadImage>
          </div>
          <div
            className="profile__edit-image-text"
          >
            Vælg billede
          </div>
        </div>
        <div
          className="profile__edit-textfield-zone"
        >
          <EditProfileForm
            activateSaveButton={[Function]}
            confirmDelete={[Function]}
            enableButton={true}
            updateImageId={[Function]}
          >
            <form
              onSubmit={[Function]}
              style={
                Object {
                  "maxWidth": "400px",
                }
              }
            >
              <div
                className="input-group mb2   has-feedback"
              >
                <div
                  className="profile__edit-username-zone"
                >
                  <div
                    className="profile__edit-inputNameTitle"
                  >
                    <T
                      component="profile"
                      name="usernameTitle"
                    >
                      Brugernavn
                    </T>
                  </div>
                  <div
                    className="profile__edit-textfield"
                  >
                    <input
                      className="profile__mobileinputfield   has-feedback"
                      data-cy="user-form-name"
                      name="name"
                      onChange={[Function]}
                      placeholder="Skriv brugernavn"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                className="profile__edit-libraryinfo"
              >
                <p
                  className="mb6"
                >
                  <T
                    component="login"
                    name="signedInby"
                  >
                    Du er logget på via
                  </T>
                  <input
                    className="profile__edit-libraryname"
                    disabled={true}
                    name="name"
                    type="text"
                    value=""
                  />
                </p>
              </div>
              <div
                className="profile__edit-link"
              >
                <a
                  href="/om"
                >
                  <T
                    component="profile"
                    name="termsAndConditions"
                  >
                    Se regler og vilkår for Læsekompasset
                  </T>
                </a>
              </div>
              <div
                className="profile__edit-link"
              >
                <mockConstructor
                  href="#!"
                  onClick={[Function]}
                >
                  <mocked-link
                    href="#!"
                    onClick={[Function]}
                  >
                    <T
                      component="profile"
                      name="deleteProfile"
                    >
                      Slet profil
                    </T>
                  </mocked-link>
                </mockConstructor>
              </div>
              <div
                className="profile__edit-bottom-position"
              >
                <Toolbar>
                  <div
                    className="Toolbar "
                  >
                    <div
                      className="Toolbar__left"
                    />
                    <div
                      className="Toolbar__center"
                    />
                    <div
                      className="Toolbar__right"
                    >
                      <Button
                        key="0"
                        onClick={[Function]}
                        size="medium"
                        style={
                          Object {
                            "backgroundColor": "var(--porcelain)",
                          }
                        }
                        type="quaternary"
                      >
                        <button
                          className="
                              btn Button Button__medium Button__quaternary "
                          data-cy=""
                          disabled={false}
                          onClick={[Function]}
                          style={
                            Object {
                              "backgroundColor": "var(--porcelain)",
                            }
                          }
                        >
                          <span>
                            <T
                              component="general"
                              name="cancel"
                            >
                              Fortryd
                            </T>
                          </span>
                        </button>
                      </Button>
                      <Button
                        data-cy="user-form-submit"
                        disabled={false}
                        key="1"
                        size="medium"
                        type="quaternary"
                      >
                        <button
                          className="
                              btn Button Button__medium Button__quaternary "
                          data-cy=""
                          disabled={false}
                        >
                          <span>
                            <T
                              component="profile"
                              name="saveChanges"
                            >
                              Gem ændringer
                            </T>
                          </span>
                        </button>
                      </Button>
                    </div>
                  </div>
                </Toolbar>
              </div>
            </form>
          </EditProfileForm>
        </div>
      </div>
    </div>
  </div>
</CreateProfilePage>
`;

exports[`Image Upload render function renders an image upload form 1`] = `
<div
  className="container"
>
  <div
    className="profile__edit-titlezone"
  >
    <h1
      className="profile__edit-title"
    />
  </div>
  <div
    className="profile__edit-page-position"
  >
    <div
      className="profile__edit-top-position"
    >
      <div
        className="profile__edit-image-zone"
      >
        <div
          className="profile__edit-image-upload"
        >
          <div
            className="profile-picture"
          >
            <div
              className="image-upload"
            >
              <div
                className="image-upload-loader"
              >
                <label>
                  <img
                    alt=""
                    className="image-upload-image"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                    src="/img/general/user-placeholder-thumbnail.svg"
                  />
                  <input
                    accept="image/png, image/jpeg"
                    className="droppable-image-field--file-input"
                    name={undefined}
                    onChange={[Function]}
                    type="file"
                  />
                </label>
              </div>
              <div
                style={
                  Object {
                    "clear": "both",
                  }
                }
              />
              <div
                className="profile__image-errors"
              />
            </div>
          </div>
        </div>
        <div
          className="profile__edit-image-text"
        >
          Vælg billede
        </div>
      </div>
      <div
        className="profile__edit-textfield-zone"
      >
        <form
          onSubmit={[Function]}
          style={
            Object {
              "maxWidth": "400px",
            }
          }
        >
          <div
            className="input-group mb2   has-feedback"
          >
            <div
              className="profile__edit-username-zone"
            >
              <div
                className="profile__edit-inputNameTitle"
              >
                Brugernavn
              </div>
              <div
                className="profile__edit-textfield"
              >
                <input
                  className="profile__mobileinputfield   has-feedback"
                  data-cy="user-form-name"
                  name="name"
                  onChange={[Function]}
                  placeholder="Skriv brugernavn"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            className="profile__edit-libraryinfo"
          >
            <p
              className="mb6"
            >
              Du er logget på via
              <input
                className="profile__edit-libraryname"
                disabled={true}
                name="name"
                type="text"
                value=""
              />
            </p>
          </div>
          <div
            className="profile__edit-link"
          >
            <a
              href="/om"
            >
              Se regler og vilkår for Læsekompasset
            </a>
          </div>
          <div
            className="profile__edit-link"
          >
            <mocked-link
              href="#!"
              onClick={[Function]}
            >
              Slet profil
            </mocked-link>
          </div>
          <div
            className="profile__edit-bottom-position"
          >
            <div
              className="Toolbar "
            >
              <div
                className="Toolbar__left"
              />
              <div
                className="Toolbar__center"
              />
              <div
                className="Toolbar__right"
              >
                <button
                  className="
                      btn Button Button__medium Button__quaternary "
                  data-cy=""
                  disabled={false}
                  onClick={[Function]}
                  style={
                    Object {
                      "backgroundColor": "var(--porcelain)",
                    }
                  }
                >
                  
                  <span>
                    Fortryd
                  </span>
                  
                </button>
                <button
                  className="
                      btn Button Button__medium Button__quaternary "
                  data-cy=""
                  disabled={true}
                >
                  
                  <span>
                    Gem ændringer
                  </span>
                  
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
